[web] Add: Fix property navbar z-index bug when show house-type popup window

--- a/source/web/src/static/styles/project/_imports.less
+++ b/source/web/src/static/styles/project/_imports.less
@@ -32,6 +32,7 @@
 @house_card_image-height:213px;
 
 @header-z-index:50;
+@property-nav-z-index:60;
 
 @modal-shadow-z-index: 103;
 @modal-z-index: 104;
